@startuml
Solution46 o-- CreateHistogram
Solution46 o-- WordAndQuantity
Solution46 o-- WordFileReader
CreateHistogram o-- WordAndQuantity
CreateHistogram o-- WordAndQuantityComparator
WordFileReader o-- WordAndQuantity

class Solution46 {
-{static}final Path INPUT_FILE_PATH
-ArrayList<WordAndQuantity> wordArray
-final WordFileReader fileReader
+void main()
}

class WordAndQuantity {
-final String name
-int quantity
+int quantity()
+int name()
+void incrementQuantity()
}

class WordFileReader {
-{static} final Pattern VALID_DELIMITERS
-final List<WordAndQuantity> wordListToWriteTo
-final Path pathToReadFrom
+List<WordAndQuantity> fillWordList()
-void addOrIncrementWord(String wordString)
}

class CreateHistogram {
-{static} final int BUFFER_SPACES
-final List<WordAndQuantity> wordListToReadFrom
+void createHistogram()
+int compareTo(@NotNull WordAndQuantity otherWordAndQuantity)
+boolean equals(Object otherWordAndQuantity)
+int hashCode()
}

class WordAndQuantityComparator implements Comparator, Serializable{
-{static} final long serialVersionUID
+int compare(WordAndQuantity o1, WordAndQuantity o2)
}
@enduml